活动相关修改

--- a/app/index.html
+++ b/app/index.html
@@ -128,8 +128,8 @@
     </section>
     <section class="history">
         <div class="row">
-            <div class="col-xs-item">
-                <a class="single-text" href="">News</a>
+            <div class="col-xs-item active">
+                <a class="single-text " href="">News</a>
             </div>
             <div class="col-xs-item col-xs-item-half">
                 <div class="col-xs-6 br">
@@ -276,17 +276,116 @@
     </section>
     <section class="activity">
         <div class="container">
+            <a class="arraw prev"></a>
+            <a class="arraw next"></a>
+            <div class="nav nav-year">
+                <ul>
+                    <li class="active"><a href="#2014">2014</a></li>
+                    <li><a href="#2013">2013</a></li>
+                    <li><a href="#2012">2012</a></li>
+                    <li><a href="#2011">2011</a></li>
+                    <li><a href="#2010">2010</a></li>
+                    <li><a href="#2009">2009</a></li>
+                    <li><a href="#2008">2008</a></li>
+                    <li><a href="#2007">2007</a></li>
+                    <li><a href="#2006">2006</a></li>
+                    <li><a href="#2005">2005</a></li>
+                </ul>
+            </div>
             <div class="mac">
                 <img class="mac-bg" src="images/bg02.png" height="439" width="576" alt="">
-                <div class="screen">
+                <div class="screen active" data-year="2014">
                     <img src="images/pic15.jpg" height="299" width="530" alt="">
                     <div class="title">2014年北戴河避暑</div>
                 </div>
+                <div class="screen" data-year="2013">
+                    <img src="images/pic15.jpg" height="299" width="530" alt="">
+                    <div class="title">2013年北戴河避暑</div>
+                </div>
+                <div class="screen" data-year="2012">
+                    <img src="images/pic15.jpg" height="299" width="530" alt="">
+                    <div class="title">2012年北戴河避暑</div>
+                </div>
+                <div class="screen" data-year="2011">
+                    <img src="images/pic15.jpg" height="299" width="530" alt="">
+                    <div class="title">2011年北戴河避暑</div>
+                </div>
+                <div class="screen" data-year="2010">
+                    <img src="images/pic15.jpg" height="299" width="530" alt="">
+                    <div class="title">2010年北戴河避暑</div>
+                </div>
+                <div class="screen" data-year="2009">
+                    <img src="images/pic15.jpg" height="299" width="530" alt="">
+                    <div class="title">2009年北戴河避暑</div>
+                </div>
+                <div class="screen" data-year="2008">
+                    <img src="images/pic15.jpg" height="299" width="530" alt="">
+                    <div class="title">2008年北戴河避暑</div>
+                </div>
+                <div class="screen" data-year="2007">
+                    <img src="images/pic15.jpg" height="299" width="530" alt="">
+                    <div class="title">2007年北戴河避暑</div>
+                </div>
+                <div class="screen" data-year="2006">
+                    <img src="images/pic15.jpg" height="299" width="530" alt="">
+                    <div class="title">2006年北戴河避暑</div>
+                </div>
+                <div class="screen" data-year="2005">
+                    <img src="images/pic15.jpg" height="299" width="530" alt="">
+                    <div class="title">2005年北戴河避暑</div>
+                </div>
             </div>
-            <div class="detail">
-                <h1>2014年北戴河避暑</h1>
-                <p>在这几年的发展探索中，盛世阳光秉持"拒绝平凡"的理念，致力于企业互动营销设计领域，提供网站建设与维护、多媒体设计制作等服务。目前已形成一套科学、完整、高效的项目运作体系，凭借高品位的设计风格、精湛的技术水平，为不同客户提供定制化的服务。</p>
-                <a href="" class="btn btn-a">活动详情</a>
+            <div class="detail-wrap">
+                <div class="detail active" data-year="2014">
+                    <h1>2014年北戴河避暑</h1>
+                    <p>在这几年的发展探索中，盛世阳光秉持"拒绝平凡"的理念，致力于企业互动营销设计领域，提供网站建设与维护、多媒体设计制作等服务。目前已形成一套科学、完整、高效的项目运作体系，凭借高品位的设计风格、精湛的技术水平，为不同客户提供定制化的服务。</p>
+                    <a href="" class="btn btn-a">活动详情</a>
+                </div>
+                <div class="detail" data-year="2013">
+                    <h1>2013年北戴河避暑</h1>
+                    <p>在这几年的发展探索中，盛世阳光秉持"拒绝平凡"的理念，致力于企业互动营销设计领域，提供网站建设与维护、多媒体设计制作等服务。目前已形成一套科学、完整、高效的项目运作体系，凭借高品位的设计风格、精湛的技术水平，为不同客户提供定制化的服务。</p>
+                    <a href="" class="btn btn-a">活动详情</a>
+                </div>
+                <div class="detail" data-year="2012">
+                    <h1>2012年北戴河避暑</h1>
+                    <p>在这几年的发展探索中，盛世阳光秉持"拒绝平凡"的理念，致力于企业互动营销设计领域，提供网站建设与维护、多媒体设计制作等服务。目前已形成一套科学、完整、高效的项目运作体系，凭借高品位的设计风格、精湛的技术水平，为不同客户提供定制化的服务。</p>
+                    <a href="" class="btn btn-a">活动详情</a>
+                </div>
+                <div class="detail" data-year="2011">
+                    <h1>2011年北戴河避暑</h1>
+                    <p>在这几年的发展探索中，盛世阳光秉持"拒绝平凡"的理念，致力于企业互动营销设计领域，提供网站建设与维护、多媒体设计制作等服务。目前已形成一套科学、完整、高效的项目运作体系，凭借高品位的设计风格、精湛的技术水平，为不同客户提供定制化的服务。</p>
+                    <a href="" class="btn btn-a">活动详情</a>
+                </div>
+                <div class="detail" data-year="2010">
+                    <h1>2010年北戴河避暑</h1>
+                    <p>在这几年的发展探索中，盛世阳光秉持"拒绝平凡"的理念，致力于企业互动营销设计领域，提供网站建设与维护、多媒体设计制作等服务。目前已形成一套科学、完整、高效的项目运作体系，凭借高品位的设计风格、精湛的技术水平，为不同客户提供定制化的服务。</p>
+                    <a href="" class="btn btn-a">活动详情</a>
+                </div>
+                <div class="detail" data-year="2009">
+                    <h1>2009年北戴河避暑</h1>
+                    <p>在这几年的发展探索中，盛世阳光秉持"拒绝平凡"的理念，致力于企业互动营销设计领域，提供网站建设与维护、多媒体设计制作等服务。目前已形成一套科学、完整、高效的项目运作体系，凭借高品位的设计风格、精湛的技术水平，为不同客户提供定制化的服务。</p>
+                    <a href="" class="btn btn-a">活动详情</a>
+                </div>
+                <div class="detail" data-year="2008">
+                    <h1>2008年北戴河避暑</h1>
+                    <p>在这几年的发展探索中，盛世阳光秉持"拒绝平凡"的理念，致力于企业互动营销设计领域，提供网站建设与维护、多媒体设计制作等服务。目前已形成一套科学、完整、高效的项目运作体系，凭借高品位的设计风格、精湛的技术水平，为不同客户提供定制化的服务。</p>
+                    <a href="" class="btn btn-a">活动详情</a>
+                </div>
+                <div class="detail" data-year="2007">
+                    <h1>2007年北戴河避暑</h1>
+                    <p>在这几年的发展探索中，盛世阳光秉持"拒绝平凡"的理念，致力于企业互动营销设计领域，提供网站建设与维护、多媒体设计制作等服务。目前已形成一套科学、完整、高效的项目运作体系，凭借高品位的设计风格、精湛的技术水平，为不同客户提供定制化的服务。</p>
+                    <a href="" class="btn btn-a">活动详情</a>
+                </div>
+                <div class="detail" data-year="2006">
+                    <h1>2006年北戴河避暑</h1>
+                    <p>在这几年的发展探索中，盛世阳光秉持"拒绝平凡"的理念，致力于企业互动营销设计领域，提供网站建设与维护、多媒体设计制作等服务。目前已形成一套科学、完整、高效的项目运作体系，凭借高品位的设计风格、精湛的技术水平，为不同客户提供定制化的服务。</p>
+                    <a href="" class="btn btn-a">活动详情</a>
+                </div>
+                <div class="detail" data-year="2005">
+                    <h1>2005年北戴河避暑</h1>
+                    <p>在这几年的发展探索中，盛世阳光秉持"拒绝平凡"的理念，致力于企业互动营销设计领域，提供网站建设与维护、多媒体设计制作等服务。目前已形成一套科学、完整、高效的项目运作体系，凭借高品位的设计风格、精湛的技术水平，为不同客户提供定制化的服务。</p>
+                    <a href="" class="btn btn-a">活动详情</a>
+                </div>
             </div>
         </div>
     </section>
@@ -434,6 +533,36 @@
             dots: false,
             speed: 500,
             arrows: true
+        });
+
+        $('.nav-year a').click(function(e) {
+            e.preventDefault();
+            var year = $(this).attr('href');
+            year = year.replace('#', '');
+            $(this).closest('ul').find('li').removeClass('active');
+            $(this).closest('li').addClass('active');
+
+            $('.mac').find('.screen').removeClass('active');
+            $('.mac').find('.screen[data-year="' + year + '"]').addClass('active');
+
+            $('.detail-wrap').find('.detail').removeClass('active');
+            $('.detail-wrap').find('.detail[data-year="' + year + '"]').addClass('active');
+        });
+
+        $('.activity .prev').on('click', function(e){
+            e.preventDefault();
+            var index = $('.activity .nav-year li.active').index();
+            var total = $('.activity .nav-year li').length;
+
+            $('.activity .nav-year li').eq((index-1 + total) % total).find('a').trigger('click');
+        });
+
+        $('.activity .next').on('click', function(e){
+            e.preventDefault();
+            var index = $('.activity .nav-year li.active').index();
+            var total = $('.activity .nav-year li').length;
+
+            $('.activity .nav-year li').eq((index+1) % total).find('a').trigger('click');
         });
     });
     </script>
