--- a/app/index.html
+++ b/app/index.html
@@ -133,113 +133,191 @@
             </div>
             <div class="col-xs-item col-xs-item-half">
                 <div class="col-xs-6 br">
-                    <a class="half-single-text" href="">公司动态</a>
+                    <a class="half-single-text company" href="">公司动态</a>
                 </div>
                 <div class="col-xs-6">
-                    <a class="half-single-text" href="">行业动态</a>
+                    <a class="half-single-text industry" href="">行业动态</a>
                 </div>
             </div>
-            <div class="col-xs-item">
-                <a class="normal-item" href="">
+            <div class="col-xs-item item-news">
+                <a class="normal-item company" href="">
                     <h1>20</h1>
                     <p>2015-09</p>
                     <h5>公司和协和医院签订网站建设合同</h5>
                     <p>Details +</p>
                 </a>
+                <a class="normal-item industry" href="">
+                    <h1>10</h1>
+                    <p>2015-08</p>
+                    <h5>中联资产委托盛世阳光设计开发网站</h5>
+                    <p>Details +</p>
+                </a>
             </div>
-            <div class="col-xs-item">
-                <a class="normal-item" href="">
+            <div class="col-xs-item item-news">
+                <a class="normal-item company" href="">
                     <h1>20</h1>
                     <p>2015-09</p>
                     <h5>公司和协和医院签订网站建设合同</h5>
                     <p>Details +</p>
                 </a>
+                <a class="normal-item industry" href="">
+                    <h1>10</h1>
+                    <p>2015-08</p>
+                    <h5>中联资产委托盛世阳光设计开发网站</h5>
+                    <p>Details +</p>
+                </a>
             </div>
-            <div class="col-xs-item">
-                <a class="normal-item" href="">
+            <div class="col-xs-item item-news">
+                <a class="normal-item company" href="">
                     <h1>20</h1>
                     <p>2015-09</p>
                     <h5>公司和协和医院签订网站建设合同</h5>
                     <p>Details +</p>
                 </a>
+                <a class="normal-item industry" href="">
+                    <h1>10</h1>
+                    <p>2015-08</p>
+                    <h5>中联资产委托盛世阳光设计开发网站</h5>
+                    <p>Details +</p>
+                </a>
             </div>
-            <div class="col-xs-item">
-                <a class="normal-item" href="">
+            <div class="col-xs-item item-news">
+                <a class="normal-item company" href="">
                     <h1>20</h1>
                     <p>2015-09</p>
                     <h5>公司和协和医院签订网站建设合同</h5>
                     <p>Details +</p>
                 </a>
+                <a class="normal-item industry" href="">
+                    <h1>10</h1>
+                    <p>2015-08</p>
+                    <h5>中联资产委托盛世阳光设计开发网站</h5>
+                    <p>Details +</p>
+                </a>
             </div>
-            <div class="col-xs-item">
-                <a class="normal-item" href="">
+            <div class="col-xs-item item-news">
+                <a class="normal-item company" href="">
                     <h1>20</h1>
                     <p>2015-09</p>
                     <h5>公司和协和医院签订网站建设合同</h5>
                     <p>Details +</p>
                 </a>
+                <a class="normal-item industry" href="">
+                    <h1>10</h1>
+                    <p>2015-08</p>
+                    <h5>中联资产委托盛世阳光设计开发网站</h5>
+                    <p>Details +</p>
+                </a>
             </div>
-            <div class="col-xs-item">
-                <a class="normal-item" href="">
+            <div class="col-xs-item item-news">
+                <a class="normal-item company" href="">
                     <h1>20</h1>
                     <p>2015-09</p>
                     <h5>公司和协和医院签订网站建设合同</h5>
                     <p>Details +</p>
                 </a>
+                <a class="normal-item industry" href="">
+                    <h1>10</h1>
+                    <p>2015-08</p>
+                    <h5>中联资产委托盛世阳光设计开发网站</h5>
+                    <p>Details +</p>
+                </a>
             </div>
-            <div class="col-xs-item">
-                <a class="normal-item" href="">
+            <div class="col-xs-item item-news">
+                <a class="normal-item company" href="">
                     <h1>20</h1>
                     <p>2015-09</p>
                     <h5>公司和协和医院签订网站建设合同</h5>
                     <p>Details +</p>
                 </a>
+                <a class="normal-item industry" href="">
+                    <h1>10</h1>
+                    <p>2015-08</p>
+                    <h5>中联资产委托盛世阳光设计开发网站</h5>
+                    <p>Details +</p>
+                </a>
             </div>
-            <div class="col-xs-item">
-                <a class="normal-item" href="">
+            <div class="col-xs-item item-news">
+                <a class="normal-item company" href="">
                     <h1>20</h1>
                     <p>2015-09</p>
                     <h5>公司和协和医院签订网站建设合同</h5>
                     <p>Details +</p>
                 </a>
+                <a class="normal-item industry" href="">
+                    <h1>10</h1>
+                    <p>2015-08</p>
+                    <h5>中联资产委托盛世阳光设计开发网站</h5>
+                    <p>Details +</p>
+                </a>
             </div>
-            <div class="col-xs-item">
-                <a class="normal-item" href="">
+            <div class="col-xs-item item-news">
+                <a class="normal-item company" href="">
                     <h1>20</h1>
                     <p>2015-09</p>
                     <h5>公司和协和医院签订网站建设合同</h5>
                     <p>Details +</p>
                 </a>
+                <a class="normal-item industry" href="">
+                    <h1>10</h1>
+                    <p>2015-08</p>
+                    <h5>中联资产委托盛世阳光设计开发网站</h5>
+                    <p>Details +</p>
+                </a>
             </div>
-            <div class="col-xs-item">
-                <a class="normal-item" href="">
+            <div class="col-xs-item item-news">
+                <a class="normal-item company" href="">
                     <h1>20</h1>
                     <p>2015-09</p>
                     <h5>公司和协和医院签订网站建设合同</h5>
                     <p>Details +</p>
                 </a>
+                <a class="normal-item industry" href="">
+                    <h1>10</h1>
+                    <p>2015-08</p>
+                    <h5>中联资产委托盛世阳光设计开发网站</h5>
+                    <p>Details +</p>
+                </a>
             </div>
-            <div class="col-xs-item">
-                <a class="normal-item" href="">
+            <div class="col-xs-item item-news">
+                <a class="normal-item company" href="">
                     <h1>20</h1>
                     <p>2015-09</p>
                     <h5>公司和协和医院签订网站建设合同</h5>
                     <p>Details +</p>
                 </a>
+                <a class="normal-item industry" href="">
+                    <h1>10</h1>
+                    <p>2015-08</p>
+                    <h5>中联资产委托盛世阳光设计开发网站</h5>
+                    <p>Details +</p>
+                </a>
             </div>
-            <div class="col-xs-item">
-                <a class="normal-item" href="">
+            <div class="col-xs-item item-news">
+                <a class="normal-item company" href="">
                     <h1>20</h1>
                     <p>2015-09</p>
                     <h5>公司和协和医院签订网站建设合同</h5>
                     <p>Details +</p>
                 </a>
+                <a class="normal-item industry" href="">
+                    <h1>10</h1>
+                    <p>2015-08</p>
+                    <h5>中联资产委托盛世阳光设计开发网站</h5>
+                    <p>Details +</p>
+                </a>
             </div>
-            <div class="col-xs-item">
-                <a class="normal-item" href="">
+            <div class="col-xs-item item-news">
+                <a class="normal-item company" href="">
                     <h1>20</h1>
                     <p>2015-09</p>
                     <h5>公司和协和医院签订网站建设合同</h5>
+                    <p>Details +</p>
+                </a>
+                <a class="normal-item industry" href="">
+                    <h1>10</h1>
+                    <p>2015-08</p>
+                    <h5>中联资产委托盛世阳光设计开发网站</h5>
                     <p>Details +</p>
                 </a>
             </div>
@@ -250,18 +328,27 @@
             <div class="row">
                 <div class="col-xs-4">
                     <div class="color-label color-label-1">
+                        <div class="bg-wrap">
+                            <img src="images/pic17.png" alt="" class="bg">
+                        </div>
                         <h1>15</h1>
                         <p>15年经验</p>
                     </div>
                 </div>
                 <div class="col-xs-4">
                     <div class="color-label color-label-2">
+                        <div class="bg-wrap">
+                            <img src="images/pic18.png" alt="" class="bg">
+                        </div>
                         <h1>22</h1>
                         <p>22步流程</p>
                     </div>
                 </div>
                 <div class="col-xs-4">
                     <div class="color-label color-label-3">
+                        <div class="bg-wrap">
+                            <img src="images/pic19.png" alt="" class="bg">
+                        </div>
                         <h1>1000</h1>
                         <p>1000次认可</p>
                     </div>
@@ -563,6 +650,23 @@
             var total = $('.activity .nav-year li').length;
 
             $('.activity .nav-year li').eq((index+1) % total).find('a').trigger('click');
+        });
+
+        $('.half-single-text.company').on('click', function(e){
+            e.preventDefault();
+            $('.item-news').css('transform', 'rotateY(0deg)');
+            setTimeout(function(){
+                $('.item-news .company').show();
+                $('.item-news .industry').hide();
+            }, 250);
+        });
+        $('.half-single-text.industry').on('click', function(e){
+            e.preventDefault();
+            $('.item-news').css('transform', 'rotateY(360deg)');
+            setTimeout(function(){
+                $('.item-news .industry').show();
+                $('.item-news .company').hide();
+            }, 250);
         });
     });
     </script>
