--- a/app/jingrong.html
+++ b/app/jingrong.html
@@ -144,8 +144,9 @@
         <img src="images/p04.png" height="396" width="1062" alt="">
     </section>
     <section class="cases">
+        <div class="container">
             <div class="row">
-                <div class="col-xs-4 col-lg-3 col-md-4 case">
+                <div class="col-xs-4 case">
                     <div class="padding-patch">
                         <div class="wrap">
                             <a href="" class="size"><img class="" src="images/j03.jpg" alt=""><i class="middle"></i></a>
@@ -153,7 +154,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-4 col-lg-3 col-md-4 case">
+                <div class="col-xs-4 case">
                     <div class="padding-patch">
                         <div class="wrap">
                             <a href="" class="size"><img class="" src="images/j04.jpg" alt=""><i class="middle"></i></a>
@@ -161,7 +162,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-4 col-lg-3 col-md-4 case">
+                <div class="col-xs-4 case">
                     <div class="padding-patch">
                         <div class="wrap">
                             <a href="" class="size"><img class="" src="images/j05.jpg" alt=""><i class="middle"></i></a>
@@ -169,7 +170,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-4 col-lg-3 col-md-4 case">
+                <div class="col-xs-4 case">
                     <div class="padding-patch">
                         <div class="wrap">
                             <a href="" class="size"><img class="" src="images/j03.jpg" alt=""><i class="middle"></i></a>
@@ -177,7 +178,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-4 col-lg-3 col-md-4 case">
+                <div class="col-xs-4 case">
                     <div class="padding-patch">
                         <div class="wrap">
                             <a href="" class="size"><img class="" src="images/j04.jpg" alt=""><i class="middle"></i></a>
@@ -185,7 +186,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-4 col-lg-3 col-md-4 case">
+                <div class="col-xs-4 case">
                     <div class="padding-patch">
                         <div class="wrap">
                             <a href="" class="size"><img class="" src="images/j05.jpg" alt=""><i class="middle"></i></a>
@@ -193,6 +194,7 @@
                         </div>
                     </div>
                 </div>
+            </div>
         </div>
     </section>
     <footer>
